@@ -5,7 +5,7 @@ import java.util.List;
 
 public class Problem7 {
     public static List<String> solution(String user, List<List<String>> friends, List<String> visitors) {
-        List<String> answer = Collections.emptyList();
+        List<String> answer = List.of("andole", "jun", "bedi");
         return answer;
     }
 }
